# gideon-tasks

./: .env.production.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml  license.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.cargo/: audit.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/middleware/: mod.rs  rate_limit.rs
backend/src/models/: attestation.rs  audit.rs  category.rs  invite.rs  mod.rs  moderation.rs  payment.rs  reputation.rs  review.rs  task.rs  task_application.rs  task_message.rs  user.rs
backend/src/routes/: admin.rs  applications.rs  attestations.rs  auth.rs  health.rs  invites.rs  messages.rs  mod.rs  reviews.rs  tasks.rs  users.rs  webhooks.rs
backend/src/services/: audit.rs  mod.rs  moderation.rs  payments.rs  reputation.rs  trust.rs
backend/tests/: content_moderation.rs  fee_calculation.rs  task_state_machine.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/fees/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/admin/: audit-log-table.tsx  dispute-resolver.tsx  moderation-queue.tsx  user-management.tsx
frontend/src/lib/: constants.ts
frontend/src/server/: audit.ts  auth.ts  db.ts  env.ts  errors.ts  fees.ts  moderation.ts  payments.ts  platform-volume.ts  reputation.ts  route-helpers.ts  state-machine.ts  stripe.ts  trust-levels.ts  trust.ts
nginx/: nginx.conf
scripts/: backup-db.sh  deploy.sh  init-ssl.sh
(+141 files in other folders)
