[package]
name = "gideon-tasks-api"
version = "0.1.0"
edition = "2024"
license = "GCOSL-1.0"
description = "Gideon Tasks — invite-only task marketplace API"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.9"

# UUID
uuid = { version = "1", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Stripe
stripe = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper", "connect"] }

# HTTP client (for Stripe webhooks verification, etc.)
reqwest = { version = "0.12", features = ["json"] }

# Environment / Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Regex for content moderation
regex = "1"
once_cell = "1"

# HMAC for webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["full", "test-util"] }
